<resources>
    <string name="app_name">Dashboard_Ramadhani__27</string>
    <string name="welcome_to_dashboard">WELCOME TO DASHBOARD</string>
    <string name="grace">Grace</string>
    <string name="chat">Chat</string>
    <string name="todo">TODO</string>
    <string name="pay">Pay</string>
    <string name="seacrh">Seacrh</string>
    <string name="search">Search</string>
    <string name="annoncement">Annoncement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>