<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".fragmen.HomeFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="89dp"
        android:layout_height="134dp"
        android:src="@drawable/icon_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_dashboard"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grace"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <GridLayout
        android:id="@+id/grid_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo"
        app:layout_constraintVertical_bias="1.0"
        android:layout_width="392dp"
        android:layout_height="486dp"
        android:layout_marginHorizontal="16dp"
        android:rowCount="3"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="253dp">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="8dp"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="159dp"
                android:layout_height="158dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageChat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="83dp"
                    android:layout_height="76dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/icon_chat" />

                <TextView
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="8dp"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="159dp"
                android:layout_height="158dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagePay"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="83dp"
                    android:layout_height="76dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/icon_pay" />

                <TextView
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imagePay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="8dp"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="159dp"
                android:layout_height="158dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageSeacrh"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="83dp"
                    android:layout_height="76dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/icon_seacrh" />

                <TextView
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageSeacrh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seacrh"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="159dp"
                android:layout_height="158dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageAnnoncement"
                    android:layout_width="83dp"
                    android:layout_height="76dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/icon_annoncement"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annoncement"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageAnnoncement" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
